# next-tauri-bun

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  bump.config.ts  bun.lockb  next.config.ts  package.json  postcss.config.ts
.infra/chart/: .helmignore  Chart.yaml  values.yaml
.infra/chart/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
.infra/scripts/: android-signing.sh
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css
