[package]
name = "nayud"
version = "1.0.0"
description = ""
authors = ["Dimas Yudha Pratama"]
license = "MIT"
repository = "https://github.com/pingdimasyudha/next-tauri-bun"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.22"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2.2.0"
tauri-plugin-notification = { version = "2.2.0", features = [ "windows7-compat" ] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.3.1"
